# software-coding-task

./: .gitignore  pnpm-lock.yaml
apps/api/: .gitignore  auth.py  config.py  database.py  dependencies.py  main.py  models.py  pyproject.toml  seed.py
apps/api/alembic/: env.py
apps/api/alembic/versions/: c3c7fd39fabc_create_users_and_dashboard_data_tables.py
apps/api/routes/: auth.py  chat.py  dashboard.py
apps/api/services/: chat_tools.py  meridian_service.py
apps/web/: middleware.ts  package.json
apps/web/app/dashboard/: page.tsx
apps/web/app/login/: page.tsx
apps/web/app/signup/: page.tsx
apps/web/components/dashboard/: chat-panel.tsx  contribution-chart.tsx  hero-section.tsx  response-curves.tsx  roi-chart.tsx  spend-trends.tsx  spend-vs-contribution.tsx  summary-table.tsx
apps/web/hooks/: useAuth.ts  useDashboardData.ts
apps/web/lib/: auth.ts  constants.ts  format.ts  types.ts
meridian_trace/: README.docx  example_mmm_1_4_0.pkl
meridian_trace/plots/: contribution_pie.html  contribution_waterfall.html  response_curves.html  roi_bar.html  spend_vs_contribution.html
